--- a/TreasuryFarm/TreasuryFarm.csproj
+++ b/TreasuryFarm/TreasuryFarm.csproj
@@ -4,18 +4,18 @@
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <RootNamespace>DonCami.Stardew.TreasuryFarm</RootNamespace>
         <EnableHarmony>true</EnableHarmony>
-        <IgnoreModFilePaths>assets/paths.png, assets/spring_beach.png, assets/spring_island_tilesheet_1.png, assets/spring_outdoorsTileSheet.png, assets/spring_outdoorsTileSheet2.png, assets/spring_town.png</IgnoreModFilePaths>
+        <IgnoreModFilePaths>assets/paths.png, assets/spring_outdoorsTileSheet.png, assets/spring_outdoorsTileSheet2.png, assets/spring_town.png</IgnoreModFilePaths>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
-        <Version>0.1</Version>
+        <Version>0.0.3</Version>
         <TargetFramework>net6.0</TargetFramework>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
-        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.1.0" />
+        <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2" />
+        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
     </ItemGroup>
 
     <Import Project="..\Common\Common.projitems" Label="Shared" />
