add spring_outdoorsTileSheet2.png to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ TreasuryFarm/assets/paths.png
 TreasuryFarm/assets/spring_beach.png
 TreasuryFarm/assets/spring_island_tilesheet_1.png
 TreasuryFarm/assets/spring_outdoorsTileSheet.png
+TreasuryFarm/assets/spring_outdoorsTileSheet2.png
 TreasuryFarm/assets/spring_town.png
 
 # JetBrains Rider
