--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <!-- common build settings -->
   <PropertyGroup>
-    <Authors>Pathoschild</Authors>
+    <Authors>DonCami</Authors>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/Pathoschild/StardewMods</RepositoryUrl>
+    <RepositoryUrl>https://github.com/DonCami/StardewMods</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
 
     <TargetFramework>net6.0</TargetFramework>
