--- a/TreasuryFarm/TreasuryFarm.csproj
+++ b/TreasuryFarm/TreasuryFarm.csproj
@@ -1,24 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <Target Name="PrintSolutionDir" BeforeTargets="BeforeBuild">
-        <Message Text="SolutionDir: $(SolutionDir)" Importance="High" />
-    </Target>
     <PropertyGroup>
-        <Authors>DonCami</Authors>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <Version>0.0.8</Version>
         <RootNamespace>DonCami.Stardew.TreasuryFarm</RootNamespace>
+        
         <EnableHarmony>true</EnableHarmony>
         <IgnoreModFilePaths>assets/paths.png, assets/spring_outdoorsTileSheet.png, assets/spring_outdoorsTileSheet2.png, assets/spring_town.png</IgnoreModFilePaths>
-        <LangVersion>latest</LangVersion>
-        <Nullable>enable</Nullable>
-        <Version>0.0.3</Version>
-        <TargetFramework>net6.0</TargetFramework>
-        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-        <ModZipPath>$(SolutionDir)\_releases</ModZipPath>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2" />
-        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" Version="2.2.0" />
+        <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" />
+        <PackageReference Include="Pathoschild.Stardew.ModTranslationClassBuilder" />
     </ItemGroup>
 
     <Import Project="..\Common\Common.projitems" Label="Shared" />
