Improve code formatting and organization across multiple files

--- a/TreasuryFarm/manifest.json
+++ b/TreasuryFarm/manifest.json
@@ -7,5 +7,7 @@
   "MinimumApiVersion": "4.0.7",
   "MinimumGameVersion": "1.6.4",
   "EntryDll": "TreasuryFarm.dll",
-  "UpdateKeys": ["Nexus:26447"]
+  "UpdateKeys": [
+    "Nexus:26447"
+  ]
 }
